Version 1.10.1:

    * Fixed exception and possible menu-deletion when readding an already existing document
      to a menu sorted by "manual" order. (Bug 2443)  


Version 1.10.0:

= Of interest to users:

    * Filedocuments of types "png", "gif", or "jpeg" can now be used as images. (Bug 2128)
    * Completely redid the image-selecting interface to allow for the new filedocuments-as-images paradigm. (Bug 2128)
    * Replaced dropdown for selecting document publisher with a user-select dialog,
      and made the document creator settable in the same manner. (Bug 2149)
    * Allow filedocument filenames of up to 255 characters, truncating somewhat intelligently if needed. (Bug 2088)
    * Only show links to documents which the user has at least read permission on,
      or which are visible to non-authorized users. (Bug 2387)
    * Fixed exception when adding documents to a menu sorted by "manual" order. (Bug 2390)
    * Setting the modified time of a document is now possible,
      but it will still be updated the next time the document is modified. (Bug 2367)

= Of interest to template creators:

    * The label attribute now works for the include-tag: <?imcms:include label="Include label"?> (Bug 1622)
    * The outputdescription-attribute of the documentcategories tag now takes two values, "true" or "only" (Bug 2151):
        - "true": <?imcms:documentcategories outputdescription="true"?> will output "categoryname - categorydescription"
        - "only": <?imcms:documentcategories outputdescription="only"?> will output "categorydescription"
        - Not present: <?imcms:documentcategories?> will output "categoryname".

= Of interest to administrators:

    * The file "host.properties" is gone, and everything is put in "server.properties". (Bug 2424)
    * Worked a little more on indexing robustness. (Bug 2354)
    * Made the indexing work at a lower priority. (Bug 2362)
    * Remove documents from the index when deleted. (Bug 2365)