@@ -1,9 +1,9 @@
 Welcome to the imCMS Content Management System.
 
-For information about licening, see LICENSE.TXT
-For install instructions see INSTALL.TXT
+For information about licensing, see LICENSE.TXT
+For install instructions, see INSTALL.TXT
 To upgrade from a previous version, see UPGRADE.TXT
-For build instructins see BUILD.TXT
+For build instructions, see BUILD.TXT
 
 This version is tested on the following platforms and versions:
 
@@ -12,26 +12,17 @@ This version is tested with JDK 1.4.
 Should also work on newer versions of Java.
 
 Webserver
-This version is tested on Tomcat 4.1.29.
-Should also work on any Tomcat 4 or Tomcat 5 installation.
-Should also work with any Servlet 2.3/JSP 1.2 compliant servlet engine.
+Tested with Tomcat 4 and Tomcat 5.
+Should work with any Servlet 2.3/JSP 1.2 compliant servlet engine.
 
 Database
 This version is tested on Microsoft SQL server 2000.
 Should also work with Microsoft SQL Server Desktop Edition.
-No other databases is currently supported.
+No other databases are currently supported.
 
 OS
-This version is tested on Windows XP, Windwos 2000 and Linux.
+This version is tested on Windows XP, Windows 2000 and Linux.
 Should also work on Windows NT.
 
 Browsers
-Adminisration browsers
-This version is tested with IE 6 on Windows, Firefox 0.8 on Windows, Mozilla 1.6 on Linux.
-
-User browsers
-This version should work with Internet Explorer 4.01 or later, Netscape 4.0 or later, FireBird 0.8 or later, Mozilla 1.6 or later.
-
-
-
-
+This version is tested with IE 6 on Windows, Firefox 0.8 on Windows, and Mozilla 1.6 on Linux.
